--- a/design.css
+++ b/design.css
@@ -8,6 +8,19 @@
     padding-bottom: 5%;
 }
 
+.link:hover{
+    transition: transform .3s ease-in-out;
+    transform: scale(120%);
+}
+
+.back{
+    margin: 0px;
+    background-image: url("./assests/backdrop.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-attachment: fixed;
+}
+
 #last_subtitle{
     padding-bottom: 2%;
 }
