--- a/portfolio/drawings.css
+++ b/portfolio/drawings.css
@@ -2,7 +2,7 @@
     text-align: center;
     padding-top: 2%;
     padding-bottom: 2%;
-    background-color: peachpuff;
+    background-color: whitesmoke;  
 }
 body{
     margin: 0%;
@@ -15,8 +15,7 @@ body{
 .name{
     padding-top: 2%;
     padding-bottom: 2%;
-    /* border: solid salmon 2px; */
-    background-color: rgb(255, 239, 220);    
+    background-color: rgb(255, 232, 203); 
 }
 
 /* 
@@ -27,7 +26,7 @@ body{
 } */
 
 .artwork{
-    background-color: peachpuff;
+    background-color: whitesmoke;  
     display: grid;
     column-gap: 10px;
     grid-template-columns: auto auto auto;
