--- a/portfolio/drawings.css
+++ b/portfolio/drawings.css
@@ -1,9 +1,26 @@
 .title{
     text-align: center;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    background-color: whitesmoke;  
+    padding-top: 30%;
+    padding-bottom: 40%; 
+    background-image: url(./other/temp\ cover.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: solid 10px rgb(165, 190, 192);
+    border-bottom: solid 10px whitesmoke;
+    border-top: solid 10px whitesmoke;
 }
+
+.title>h1{
+    padding-top: 3%;
+    padding-bottom: 3%;
+    background-image: url(../assests/backdrop.png);
+    background-position: 0px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: rgb(0, 0, 0);
+    text-shadow: whitesmoke 2px 2px;
+}
+
 body{
     margin: 0%;
 }
@@ -17,13 +34,6 @@ body{
     padding-bottom: 2%;
     background-color: rgb(255, 232, 203); 
 }
-
-/* 
-.artwork{
-    display: flex;
-    justify-content: space-evenly;
-    padding-top: 5%;
-} */
 
 .artwork{
     background-color: whitesmoke;  
