--- a/portfolio/code.css
+++ b/portfolio/code.css
@@ -6,12 +6,6 @@ body{
 .title > h1{
     text-align: center;
     padding-top: 1%;
-    animation: popoff 2s forwards;
-}
-
-@keyframes popoff{
-    from {opacity:0%; transform: translateY(-100px);}
-    to {opacity: 100%; transform: translateY(0px);}
 }
 
 .title{
@@ -20,6 +14,12 @@ body{
 
 .project > h2{
     margin-top: 5%;
+    animation: popoff 2s forwards;
+}
+
+@keyframes popoff{
+    from {opacity:0%; transform: translateY(20px);}
+    to {opacity: 100%;}
 }
 
 .case{
@@ -34,10 +34,17 @@ body{
 }
 
 .evidence > a > img{
+    animation: side 2s forwards .5s;
     border-radius: 50px;
-    border: solid black 2px;
+    border: solid black 3px;
     cursor: pointer;
     transition: transform .3s ease-in-out;
+    opacity: 0%;
+}
+
+@keyframes side{
+    from {transform:translateX(-50px);}
+    to {opacity: 100%;}
 }
 
 .evidence > a > img:hover{
@@ -45,14 +52,44 @@ body{
 }
 
 .show > img{
+    margin-top: 2px;
     border-radius: 50px;
-    border: solid black 2px;
+    border: solid black 3px;
+    animation: gifpreview 2s forwards .5s;
+    opacity: 0%;
+}
+
+@keyframes gifpreview {
+    from {transform:translateX(-50px);}
+    to {opacity: 100%;}
 }
 
 .explain{
-    padding-top:0%;
     padding-bottom:2%;
 }
+
+.explain > h4{
+    opacity: 0%;
+    animation: appear 2s forwards 1.2s;
+}
+
+.explain > p{
+    opacity: 0%;
+    animation: appearagain 2s forwards 1.6s;
+}
+
+@keyframes appear{
+    from {transform: translateY(50px);}
+    to {opacity:100%;}
+}
+
+@keyframes appearagain{
+    from {transform: translateY(50px);}
+    to {opacity:100%;}
+}
+
+
+/* slide presentation */
 
 /* acting as slide container */
 .order{
