--- a/portfolio/drawings.css
+++ b/portfolio/drawings.css
@@ -20,15 +20,15 @@ body{
 
     color: rgb(0, 0, 0);
     text-shadow: whitesmoke 2px 2px;
-    
 }
 
 .title > h1{
-    animation: artshow 2s forwards;
+    animation: artshow 1.5s forwards;
 }
 
 @keyframes artshow{
-    from {transform: translateX(-1500px);}
+    from {opacity: 0%;; transform: translateY(50px);}
+    to {opacity: 100%;}
 }
 
 body{
@@ -42,7 +42,7 @@ body{
 .name{
     padding-top: 2%;
     padding-bottom: 2%;
-    background-color: rgb(248, 221, 203); 
+    background-color: rgba(248, 221, 203, 0.596); 
 }
 
 .artwork{
@@ -56,7 +56,7 @@ body{
 }
 
 .artwork:hover{
-    background-color:lightgray;
+    background-color:rgba(211, 211, 211, 0.425);
 }
 
 .piece{
@@ -78,11 +78,62 @@ body{
     transform: scale(105%);
 }
 
-.section{
-    animation: uplift 2s forwards;
+#insta > .name{
+    animation: inst 2s forwards .5s;
+    opacity: 0%;
 }
 
-@keyframes uplift{
-    from {opacity: 0%; transform: translateY(100px);}
-    to {opacity: 100%; transform: translateY(0px);}
+@keyframes inst{
+    from {transform: translateY(50px);}
+    to {opacity: 100%;}
+}
+
+#insta > .artwork{
+    opacity: 0%;
+    animation: instag 2s forwards 1s;
+}
+
+@keyframes instag {
+    from {transform: translateY(50px);}
+    to {opacity: 100%;}
+}
+
+#free > .name{
+    animation: fre 2s forwards 1.5s;
+    opacity: 0%;
+}
+
+@keyframes fre{
+    from {transform: translateY(50px);}
+    to {opacity: 100%;}
+}
+
+#free > .artwork{
+    opacity: 0%;
+    animation: freelan 2s forwards 2s;
+}
+
+@keyframes freelan{
+    from {transform: translateY(50px);}
+    to {opacity: 100%;}
+}
+
+#figma > .name{
+    opacity: 0%;
+    animation: fig 2s forwards 2.5s;
+}
+
+@keyframes fig{
+    from {transform: translateY(50px);}
+    to {opacity: 100%;}
+}
+
+#figma > .artwork{
+    opacity: 0%;
+    animation: figmao 2s forwards 3s;
+}
+
+@keyframes figmao{
+    from {transform: translateY(50px);}
+    to {opacity: 100%;}
 }
